--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["api-bindings", "email"]
 keywords = ["email", "mailjet"]
 
 [dependencies]
+names = "0.14.0"
 once_cell = "1.19.0"
 pretty_assertions = "1.4.1"
 reqwest = { version = "0.12.7", features = ["native-tls", "json"] }
@@ -21,7 +22,7 @@ serde_json = "1.0.128"
 thiserror = "1.0.64"
 tracing = "0.1.40"
 typetag = "0.2.18"
-uuid = { version = "1.10.0", features = ["v4"] }
+uuid = { version = "1.10.0", features = ["v4", "serde"] }
 
 [dev-dependencies]
 rstest = "0.22.0"
