--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ rstest = "0.22.0"
 async-std = { version = "1.13", features = ["attributes", "tokio1"] }
 tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "ansi"] }
 anyhow = "1.0.89"
+wiremock = "0.5"
