--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,11 +46,15 @@ jobs:
       - name: Tests
         run: cargo test
         env:
-          MAILJET_USER_KEY: ${{ secrets.MAILJET_USER_KEY }}
-          MAILJET_USER_NAME: ${{ secrets.MAILJET_USER_NAME }}
+          MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY }}
+          MAILJET_API_USER: ${{ secrets.MAILJET_API_USER }}
           MAILJET_FROM_EMAIL: ${{ vars.MAILJET_FROM_EMAIL }}
       - name: Generate code coverage
         run: cargo tarpaulin --verbose --all-features --timeout 120 --out xml
+        env:
+            MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY }}
+            MAILJET_API_USER: ${{ secrets.MAILJET_API_USER }}
+            MAILJET_FROM_EMAIL: ${{ vars.MAILJET_FROM_EMAIL }}
       - name: Upload coverage to codecov.io
         uses: codecov/codecov-action@v4.5.0
         with:
